<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">luaIDE</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
    <string name="action_exit">退出</string>
    <string name="run_lua">运行</string>
    <string name="back">返回</string>
    <string name="open">打开</string>
    <string name="newfile">新建</string>
    <string name="openfile">打开文件</string>
    <string name="savefile">保存文件</string>
    <string name="save">保存</string>
    <string name="savesuccess">保存成功</string>
    <string name="savefaild">保存失败</string>
    <string name="nosavering">未保存</string>
    <string name="nosavetext">正在编辑的内容未保存，是否先保存？</string>
    <string name="nosave">不保存</string>    
    <string name="fileexist">文件已存在</string>    
    <string name="fileexisttext">文件已存在，是否覆盖</string>    
    <string name="cover">覆盖</string>    
    <string name="notcover">不覆盖</string>    
    
    <string name="main_help">帮助</string>
    <string name="main_home">运行</string>
    <string name="main_doc">文档</string>
    <string name="main_set">设置</string>
    <string name="main_ad">推荐</string>
    
    <string name="exit_again">再按一次退出程序</string>
    <string name="exit_time">1000</string>
    
    <string name="run_finished">执行完毕</string>
    
    <string name="welcome_text1">上滑可进入应用</string>
    <string name="result_title">运行结果</string>
    
    <string name="popMenu">弹出菜单</string>
    <string name="thankyou">谢谢您的支持</string>
</resources>
